--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^3.0.2",
     "@devexpress/dx-react-scheduler": "^3.0.2",
     "@devexpress/dx-react-scheduler-material-ui": "^3.0.2",
     "@emotion/react": "^11.8.2",
@@ -10,7 +11,9 @@
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.3",
