--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@devexpress/dx-react-core": "^3.0.2",
     "@devexpress/dx-react-scheduler": "^3.0.2",
     "@devexpress/dx-react-scheduler-material-ui": "^3.0.2",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
@@ -20,17 +23,22 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "analytics": "^0.8.1",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.29.3",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-datetime": "^3.1.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.1.0",
     "react-modal": "^3.14.4",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "use-analytics": "^0.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@analytics/google-analytics": "^0.5.3",
     "formik": "^2.2.9"
   }
 }
