--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.29.3",
+    "react-datetime": "^3.1.1",
+    "react-modal": "^3.14.4",
+    "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.1",
+    "react-scripts": "^2.1.3",
+    "react-swipeable-views-utils": "^0.14.0",
+    "use-analytics": "^0.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
